[gd_scene load_steps=6 format=3 uid="uid://cfk15nghto2fi"]

[ext_resource type="PackedScene" uid="uid://45fp0m1vwryq" path="res://models/dummy/Personaje_desm.glb" id="1_m36ne"]
[ext_resource type="Script" uid="uid://dxt0cdtuoe88m" path="res://scenes/dummy_character/personaje_desm.gd" id="2_2761s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m36ne"]
radius = 0.30859375
height = 2.1171875

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2761s"]
radius = 0.32666016
height = 2.0561523

[sub_resource type="SphereShape3D" id="SphereShape3D_2761s"]
radius = 1.0

[node name="Personaje_desm" instance=ExtResource("1_m36ne")]
script = ExtResource("2_2761s")

[node name="attach_brazo_izq" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="6"]
transform = Transform3D(-0.96026033, 0.27910224, 1.4802944e-06, -0.27910194, -0.96026134, 1.5597314e-07, 1.4650002e-06, -2.633785e-07, 1, 0.8578953, 5.166234, 7.4832553e-07)
bone_name = "hueso_brazo_izq"
bone_idx = 2

[node name="AreaBrazoI" type="Area3D" parent="Armature/Skeleton3D/attach_brazo_izq" index="0"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/attach_brazo_izq/AreaBrazoI" index="0"]
transform = Transform3D(1, -3.858484e-13, 3.410605e-13, -3.858481e-13, 1, 0, -5.7980287e-12, 1.4495072e-12, 1, -0.026251554, 0.924876, 2.6661996e-07)
shape = SubResource("CapsuleShape3D_m36ne")

[node name="attach_brazo_der" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="7"]
transform = Transform3D(-0.9689635, -0.24720752, 9.97108e-07, 0.24720773, -0.96896267, -5.274096e-07, 1.0965408e-06, -2.6454757e-07, 1, -0.9977107, 5.1864276, 7.510388e-07)
bone_name = "hueso_brazo_der"
bone_idx = 3

[node name="AreaBrazoD" type="Area3D" parent="Armature/Skeleton3D/attach_brazo_der" index="0"]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/attach_brazo_der/AreaBrazoD" index="0"]
transform = Transform3D(1.0000001, 4.4703192e-08, 0, -2.5332002e-07, 1, 1.0516032e-12, 4.5474735e-13, 4.5474735e-13, 1, -0.033041477, 0.911958, 2.7006172e-07)
shape = SubResource("CapsuleShape3D_2761s")

[node name="attach_pierna_izq" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="8"]
transform = Transform3D(-0.99538517, 0.096177824, -2.1843737e-06, -0.09617985, -0.9953642, -4.8041136e-07, -2.2204995e-06, -2.6809596e-07, 1, 0.8895756, 1.994103, 3.1918427e-07)
bone_name = "hueso_pierna_izq"
bone_idx = 5

[node name="attach_pierna_der" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="9"]
transform = Transform3D(-0.99806213, -0.06228191, -2.0834543e-06, 0.062282134, -0.99805856, -1.3896496e-07, -2.070762e-06, -2.684567e-07, 1, -1.0427921, 1.9594772, 3.1453197e-07)
bone_name = "hueso_pierna_der"
bone_idx = 4

[node name="attach_cabeza" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.846978, 0)
bone_name = "hueso_cabeza"
bone_idx = 1

[node name="AreaCabeza" type="Area3D" parent="Armature/Skeleton3D/attach_cabeza" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7441635, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armature/Skeleton3D/attach_cabeza/AreaCabeza" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0610323, 0)
shape = SubResource("SphereShape3D_2761s")

[node name="attach_torso" type="BoneAttachment3D" parent="Armature/Skeleton3D" index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.3483138, 0)
bone_name = "hueso_torso"
bone_idx = 0
